--- a/air.html
+++ b/air.html
@@ -9,41 +9,14 @@
 	    <meta name="author" content="">
 
 	    <title>Transportation</title>
-	   	<!-- Web Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic" rel='stylesheet' type='text/css'>
-	    <!-- Bootstrap Core CSS -->
-	    <link href="css/bootstrap.min.css" rel="stylesheet">
-	    <!-- Flaticon CSS -->
-	    <link href="fonts/flaticon/flaticon.css" rel="stylesheet">
-	    <!-- font-awesome CSS -->
-	    <link href="css/font-awesome.min.css" rel="stylesheet">
-	    <!-- Offcanvas CSS -->
-	    <link href="css/hippo-off-canvas.css" rel="stylesheet">
-	    <!-- animate CSS -->
-	    <link href="css/animate.css" rel="stylesheet">
-	    <!-- language CSS -->
-	    <link href="css/language-select.css" rel="stylesheet">
-	    <!-- owl.carousel CSS -->
-	    <link href="owl.carousel/assets/owl.carousel.css" rel="stylesheet">
-		<!-- magnific-popup -->
-    	<link href="css/magnific-popup.css" rel="stylesheet">
-    	<!-- Main menu -->
-    	<link href="css/menu.css" rel="stylesheet">
-    	<!-- Template Common Styles -->
-    	<link href="css/template.css" rel="stylesheet">
-	    <!-- Custom CSS -->
-	    <link href="css/style.css" rel="stylesheet">
-	    <!-- Responsive CSS -->
-	    <link href="css/responsive.css" rel="stylesheet">
-
-	    <script src="js/vendor/modernizr-2.8.1.min.js"></script>
-	    <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	    <!--[if lt IE 9]>
-		    <script src="js/vendor/html5shim.js"></script>
-		    <script src="js/vendor/respond.min.js"></script>
-	    <![endif]-->
-	<meta name="robots" content="noindex, nofollow">
+	  <!-- Links and files for styling --> 
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/menu.css" rel="stylesheet" />
+    <link href="css/hippo-off-canvas.css" rel="stylesheet" />
+     <link href="owl.carousel/assets/owl.carousel.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
 
@@ -324,7 +297,7 @@
 								<div class="col-md-9 col-sm-7 col-xs-12">
 									<div class="single-service-content">
 										<div class="single-service-thumb">
-											<img src="img/service/airthumb.jpg" alt="image"/>
+											<img src="img/service/thumbgrid3.png" alt="image"/>
 										</div>
 										<h2>Dynamically leverage existing synergistic systems whereas future-proof sources</h2>
 										<p>Synergistically grow optimal total linkage after best-of-breed channels. Continually redefine B2C methodologies after equity invested channels. Dramatically drive just in time bandwidth rather than enterprise potentialities.Dramatically drive just in time bandwidth rather than enterprise potentialities.Dramatically drive just in time bandwidth.Continually redefine B2C methodologies after equity invested channels. Dramatically drive just in time bandwidth rather than enterprise potentialities.</p><br>
@@ -551,67 +524,17 @@
 			            <li><a href="contact.html">Contact</a></li>
 			            <li><a href="typography.html">Typography</a></li>
 			        </ul>
-			        <div class="offcanvas-widgets hidden-sm hidden-xs">
-				        <div id="twitterWidget">
-							<h2>Tweeter feed</h2>				    	
-							<div class="twitter-widget"></div>
-						</div>
-						<div class="newsletter-widget">
-							<h2>Stay in Touch</h2>
-							<p>Enter your email address to receive news &amp; offers from us</p>
+	<div id="preloader">
+      <div id="status">
+        <div class="status-mes"></div>
+      </div>
+    </div>
 
-							<form class="newsletter-form">
-								<div class="form-group">
-									<label class="sr-only" for="InputEmail1">Email address</label>
-									<input type="email" class="form-control" id="InputEmail2" placeholder="Your email address">
-									<button type="submit" class="btn">Send &nbsp;<i class="fa fa-angle-right"></i></button>
-								</div>
-							</form>		
-							       				
-						</div><!-- newsletter-widget -->
-					</div>
-
-				</div>
-	      	</div><!-- .offcanvas-menu -->
-		</div><!-- /st-container -->
-
-
-		<!-- Preloader -->
-		<div id="preloader">
-			<div id="status">
-				<div class="status-mes"></div>
-			</div>
-		</div>
-
-
-		<!-- jQuery -->
-	    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery.js"></script>
-	    <!-- Bootstrap Core JavaScript -->
-	    <script src="js/bootstrap.min.js"></script>
-	    <!-- owl.carousel -->
-	    <script src="owl.carousel/owl.carousel.min.js"></script>
-	    <!-- Magnific-popup -->
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<!-- Offcanvas Menu -->
-		<script src="js/hippo-offcanvas.js"></script>
-		<!-- inview -->
-		<script src="js/jquery.inview.min.js"></script>
-		<!-- stellar -->
-		<script src="js/jquery.stellar.js"></script>
-		<!-- countTo -->
-		<script src="js/jquery.countTo.js"></script>
-		<!-- classie -->
-		<script src="js/classie.js"></script>
-		<!-- selectFx -->
-		<script src="js/selectFx.js"></script>
-		<!-- sticky kit -->
-		<script src="js/jquery.sticky-kit.min.js"></script>
-	    <!-- GOGLE MAP -->
-	    <script src="https://maps.googleapis.com/maps/api/js"></script>
-	    <!--TWITTER FETCHER-->
-	    <script src="js/twitterFetcher_min.js"></script>
-	    <!-- Custom Script -->
-	    <script src="js/scripts.js"></script>
-	<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"93f96a8338eef8c6","version":"2025.4.0-1-g37f21b1","r":1,"token":"1aea4905526a46c1a4fc9bc1d0e89a42","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
+   <!-- Js -->
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="owl.carousel/owl.carousel.min.js"></script>
+    <script src="js/jquery.countTo.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
