--- a/moving.html
+++ b/moving.html
@@ -9,41 +9,14 @@
 	    <meta name="author" content="">
 
 	    <title>Transportation</title>
-	   	<!-- Web Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic" rel='stylesheet' type='text/css'>
-	    <!-- Bootstrap Core CSS -->
-	    <link href="css/bootstrap.min.css" rel="stylesheet">
-	    <!-- Flaticon CSS -->
-	    <link href="fonts/flaticon/flaticon.css" rel="stylesheet">
-	    <!-- font-awesome CSS -->
-	    <link href="css/font-awesome.min.css" rel="stylesheet">
-	    <!-- Offcanvas CSS -->
-	    <link href="css/hippo-off-canvas.css" rel="stylesheet">
-	    <!-- animate CSS -->
-	    <link href="css/animate.css" rel="stylesheet">
-	    <!-- language CSS -->
-	    <link href="css/language-select.css" rel="stylesheet">
-	    <!-- owl.carousel CSS -->
-		<link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
-		<!-- magnific-popup -->
-    	<link href="css/magnific-popup.css" rel="stylesheet">
-    	<!-- Main menu -->
-    	<link href="css/menu.css" rel="stylesheet">
-    	<!-- Template Common Styles -->
-    	<link href="css/template.css" rel="stylesheet">
-	    <!-- Custom CSS -->
-	    <link href="css/style.css" rel="stylesheet">
-	    <!-- Responsive CSS -->
-	    <link href="css/responsive.css" rel="stylesheet">
-
-	    <script src="js/vendor/modernizr-2.8.1.min.js"></script>
-	    <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	    <!--[if lt IE 9]>
-		    <script src="js/vendor/html5shim.js"></script>
-		    <script src="js/vendor/respond.min.js"></script>
-	    <![endif]-->
-	<meta name="robots" content="noindex, nofollow">
+<!-- Links and files for styling --> 
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/menu.css" rel="stylesheet" />
+    <link href="css/hippo-off-canvas.css" rel="stylesheet" />
+     <link href="owl.carousel/assets/owl.carousel.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
 
@@ -324,14 +297,14 @@
 
                                 	<h2>Holisticly synergize maintainable intellectual capital via viral interfaces</h2>
                                     <p>Energistically embrace functionalized appropriately seize 24/365 mindshare without top-line leadership skills. Continually innovate synergistic deliverables without frictionless initiatives. Compellingly deliver error-free results vis-a-vis empowered interfaces. Professionally fashion exceptional internal or “organic” sources and 24/7 imperatives. Enthusiastically reconceptualize revolutionary interfaces and principle-centered outsourcing.</p>
-                                    <p><img class="img-alignright" src="img/service/movingthumb.png" alt="image">Holisticly reinvent enabled channels and resource sucking architectures. Authoritatively predominate timely users before frictionless potentialities. Objectively engage interdependent web-readiness whereas accurate customer service. Competently impact B2B best practices through principle-centered information. Globally unleash progressive ROI and economically sound data.</p>
+                                    <p><img class="img-alignright" src="img/service/thumbgrid5.png" alt="image">Holisticly reinvent enabled channels and resource sucking architectures. Authoritatively predominate timely users before frictionless potentialities. Objectively engage interdependent web-readiness whereas accurate customer service. Competently impact B2B best practices through principle-centered information. Globally unleash progressive ROI and economically sound data.</p>
                                     <p>Holisticly reinvent enabled channels and resource sucking architectures. Authoritatively predominate timely users before frictionless potentialities. Objectively engage interdependent web-readiness whereas accurate customer service. Competently impact B2B best practices through principle-centered information. Globally unleash progressive ROI and economically sound data.
                                     <br>
                                     Dramatically develop leveraged data whereas integrated technologies. Enthusiastically syndicate accurate testing procedures after interactive e-tailers. Competently enable resource-leveling scenarios rather than flexible architectures. Holisticly myocardinate synergistic technologies before proactive methodologies. Credibly formulate enterprise-wide initiatives for optimal e-markets. </p>
                                     <br>
                                     <h3>Enthusiastically build inexpensive interfaces rather than market positioning collaboration and idea-sharing</h3>
                                     <p>
-                                    <img class="img-alignleft" src="img/service/movingthumb2.png" alt="image">
+                                    <img class="img-alignleft" src="img/service/thumbgrid6.png" alt="image">
                                     Phosfluorescently expedite high-payoff web-readiness without customer directed ROI. Assertively envisioneer holistic potentialities for future-proof human capital. Uniquely incentivize magnetic convergence rather than multifunctional markets. Proactively deliver distributed systems through 2.0 process improvements.
                                     <br> 
                                     Credibly myocardinate timely e-services for high-quality best practices.Monotonectally formulate cross functional users and leading-edge ideas. Quickly benchmark distributed processes after functional models. Interactively parallel task professional benefits via vertical internal or "organic" sources. Continually revolutionize cutting-edge content after functionalized infomediaries. Proactively network 24/7 imperatives and sustainable outsourcing.</p> 
@@ -553,67 +526,17 @@
 			            <li><a href="contact.html">Contact</a></li>
 			            <li><a href="typography.html">Typography</a></li>
 			        </ul>
-			        <div class="offcanvas-widgets hidden-sm hidden-xs">
-				        <div id="twitterWidget">
-							<h2>Tweeter feed</h2>				    	
-							<div class="twitter-widget"></div>
-						</div>
-						<div class="newsletter-widget">
-							<h2>Stay in Touch</h2>
-							<p>Enter your email address to receive news &amp; offers from us</p>
+	<div id="preloader">
+      <div id="status">
+        <div class="status-mes"></div>
+      </div>
+    </div>
 
-							<form class="newsletter-form">
-								<div class="form-group">
-									<label class="sr-only" for="InputEmail1">Email address</label>
-									<input type="email" class="form-control" id="InputEmail2" placeholder="Your email address">
-									<button type="submit" class="btn">Send &nbsp;<i class="fa fa-angle-right"></i></button>
-								</div>
-							</form>		
-							       				
-						</div><!-- newsletter-widget -->
-					</div>
-
-				</div>
-	      	</div><!-- .offcanvas-menu -->
-		</div><!-- /st-container -->
-
-
-		<!-- Preloader -->
-		<div id="preloader">
-			<div id="status">
-				<div class="status-mes"></div>
-			</div>
-		</div>
-
-
-		<!-- jQuery -->
-	    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery.js"></script>
-	    <!-- Bootstrap Core JavaScript -->
-	    <script src="js/bootstrap.min.js"></script>
-	    <!-- owl.carousel -->
-	    <script src="owl.carousel/owl.carousel.min.js"></script>
-	    <!-- Magnific-popup -->
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<!-- Offcanvas Menu -->
-		<script src="js/hippo-offcanvas.js"></script>
-		<!-- inview -->
-		<script src="js/jquery.inview.min.js"></script>
-		<!-- stellar -->
-		<script src="js/jquery.stellar.js"></script>
-		<!-- countTo -->
-		<script src="js/jquery.countTo.js"></script>
-		<!-- classie -->
-		<script src="js/classie.js"></script>
-		<!-- selectFx -->
-		<script src="js/selectFx.js"></script>
-		<!-- sticky kit -->
-		<script src="js/jquery.sticky-kit.min.js"></script>
-	    <!-- GOGLE MAP -->
-	    <script src="https://maps.googleapis.com/maps/api/js"></script>
-	    <!--TWITTER FETCHER-->
-	    <script src="js/twitterFetcher_min.js"></script>
-	    <!-- Custom Script -->
-	    <script src="js/scripts.js"></script>
-	<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9425bcdfaf0c2704","version":"2025.4.0-1-g37f21b1","r":1,"token":"1aea4905526a46c1a4fc9bc1d0e89a42","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
+   <!-- Js -->
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="owl.carousel/owl.carousel.min.js"></script>
+    <script src="js/jquery.countTo.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
