--- a/index.html
+++ b/index.html
@@ -1274,11 +1274,16 @@
       </div>
     </div>
 
-   <!-- Js -->
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="owl.carousel/owl.carousel.min.js"></script>
-    <script src="js/jquery.countTo.js"></script>
-    <script src="js/scripts.js"></script>
+ <!-- jQuery (required by Bootstrap 3) -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap 3 JS (required for hamburger toggle) -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<!-- Optional plugins -->
+<script src="owl.carousel/owl.carousel.min.js"></script>
+<script src="js/jquery.countTo.js"></script>
+<script src="js/scripts.js"></script>
+
   </body>
 </html>
