--- a/index.html
+++ b/index.html
@@ -105,13 +105,17 @@
                   </h1>
 
                   <!-- offcanvas-trigger -->
-                  <button
-                    type="button"
-                    class="navbar-toggle collapsed pull-right"
-                  >
-                    <span class="sr-only">Toggle navigation</span>
-                    <i class="fa fa-bars"></i>
-                  </button>
+                  <!-- offcanvas-trigger -->
+<button
+  type="button"
+  class="navbar-toggle collapsed pull-right"
+  data-toggle="collapse"
+  data-target=".navbar-collapse"
+>
+  <span class="sr-only">Toggle navigation</span>
+  <i class="fa fa-bars"></i>
+</button>
+
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
