--- a/index2.html
+++ b/index2.html
@@ -88,19 +88,25 @@
                                 <h1 class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a></h1>
 
                                 <!-- offcanvas-trigger -->
-                                <button type="button" class="navbar-toggle collapsed pull-right">
-			                          <span class="sr-only">Toggle navigation</span>
-			                          <i class="fa fa-bars"></i>
-			                        </button>
+                             <button
+  type="button"
+  class="navbar-toggle collapsed pull-right"
+  data-toggle="collapse"
+  data-target=".navbar-collapse"
+>
+  <span class="sr-only">Toggle navigation</span>
+  <i class="fa fa-bars"></i>
+</button>
 
-                            </div>
+                </div>
 
-                            <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse navbar-collapse">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-collapse">
+                  <span class="search-button pull-right"
+                    ><a href="#search"><i class="fa fa-search"></i></a
+                  ></span>
 
-                                <span class="search-button pull-right"><a href="#search"><i class="fa fa-search"></i></a></span>
-
-                                <ul class="nav navbar-nav navbar-right">
+                  <ul class="nav navbar-nav navbar-right">
                                     <!-- Home -->
                                     <li class="dropdown active"><a href="index.html">Home <span class="fa fa-angle-down"></span></a>
                                         <!-- submenu-wrapper -->
@@ -890,19 +896,18 @@
                 </ul>
            
 
-    <!-- Preloader -->
+
     <div id="preloader">
         <div id="status">
             <div class="status-mes"></div>
         </div>
     </div>
 
-    <!-- Js -->
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="owl.carousel/owl.carousel.min.js"></script>
-    <script src="js/jquery.countTo.js"></script>
-    <script src="js/scripts.js"></script>
+<script src="js/jquery.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="owl.carousel/owl.carousel.min.js"></script>
+<script src="js/jquery.countTo.js"></script>
+<script src="js/scripts.js"></script>
   
 </body>
 
