--- a/moving.html
+++ b/moving.html
@@ -532,11 +532,10 @@
       </div>
     </div>
 
-   <!-- Js -->
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="owl.carousel/owl.carousel.min.js"></script>
-    <script src="js/jquery.countTo.js"></script>
-    <script src="js/scripts.js"></script>
+ <script src="js/jquery.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="owl.carousel/owl.carousel.min.js"></script>
+<script src="js/jquery.countTo.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
