--- a/contact.html
+++ b/contact.html
@@ -9,41 +9,14 @@
 	    <meta name="author" content="">
 
 	    <title>Transportation</title>
-	    <!-- Web Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic" rel='stylesheet' type='text/css'>
-	    <!-- Bootstrap Core CSS -->
-	    <link href="css/bootstrap.min.css" rel="stylesheet">
-	    <!-- Flaticon CSS -->
-	    <link href="fonts/flaticon/flaticon.css" rel="stylesheet">
-	    <!-- font-awesome CSS -->
-	    <link href="css/font-awesome.min.css" rel="stylesheet">
-	    <!-- Offcanvas CSS -->
-	    <link href="css/hippo-off-canvas.css" rel="stylesheet">
-	    <!-- animate CSS -->
-	    <link href="css/animate.css" rel="stylesheet">
-	    <!-- language CSS -->
-	    <link href="css/language-select.css" rel="stylesheet">
-	    <!-- owl.carousel CSS -->
-	    <link href="owl.carousel/assets/owl.carousel.css" rel="stylesheet">
-		<!-- magnific-popup -->
-    	<link href="css/magnific-popup.css" rel="stylesheet">
-    	<!-- Main menu -->
-    	<link href="css/menu.css" rel="stylesheet">
-    	<!-- Template Common Styles -->
-    	<link href="css/template.css" rel="stylesheet">
-	    <!-- Custom CSS -->
-	    <link href="css/style.css" rel="stylesheet">
-	    <!-- Responsive CSS -->
-	    <link href="css/responsive.css" rel="stylesheet">
-
-	    <script src="js/vendor/modernizr-2.8.1.min.js"></script>
-	    <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	    <!--[if lt IE 9]>
-		    <script src="js/vendor/html5shim.js"></script>
-		    <script src="js/vendor/respond.min.js"></script>
-	    <![endif]-->
-	<meta name="robots" content="noindex, nofollow">
+<!-- Links and files for styling --> 
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link href="css/menu.css" rel="stylesheet" />
+    <link href="css/hippo-off-canvas.css" rel="stylesheet" />
+     <link href="owl.carousel/assets/owl.carousel.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
 
@@ -104,21 +77,25 @@
 									<h1 class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a></h1>
 
 									<!-- offcanvas-trigger -->
-			                        <button type="button" class="navbar-toggle collapsed pull-right" >
-			                          <span class="sr-only">Toggle navigation</span>
-			                          <i class="fa fa-bars"></i>
-			                        </button>
+			                        <button
+  type="button"
+  class="navbar-toggle collapsed pull-right"
+  data-toggle="collapse"
+  data-target=".navbar-collapse"
+>
+  <span class="sr-only">Toggle navigation</span>
+  <i class="fa fa-bars"></i>
+</button>
 
-								</div>
+                </div>
 
-								<!-- Collect the nav links, forms, and other content for toggling -->
-								<div class="collapse navbar-collapse navbar-collapse">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-collapse">
+                  <span class="search-button pull-right"
+                    ><a href="#search"><i class="fa fa-search"></i></a
+                  ></span>
 
-
-
-					                <span class="search-button pull-right"><a href="#search"><i class="fa fa-search"></i></a></span>
-
-									<ul class="nav navbar-nav navbar-right">
+                  <ul class="nav navbar-nav navbar-right">
 										<!-- Home -->
                                         <li class="dropdown"><a href="index.html">Home <span class="fa fa-angle-down"></span></a>
                                             <!-- submenu-wrapper -->
