--- a/shipping.html
+++ b/shipping.html
@@ -78,21 +78,25 @@
 									<h1 class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo.png" alt=""></a></h1>
 
 									<!-- offcanvas-trigger -->
-			                        <button type="button" class="navbar-toggle collapsed pull-right" >
-			                          <span class="sr-only">Toggle navigation</span>
-			                          <i class="fa fa-bars"></i>
-			                        </button>
+			                        <button
+  type="button"
+  class="navbar-toggle collapsed pull-right"
+  data-toggle="collapse"
+  data-target=".navbar-collapse"
+>
+  <span class="sr-only">Toggle navigation</span>
+  <i class="fa fa-bars"></i>
+</button>
 
-								</div>
+                </div>
 
-								<!-- Collect the nav links, forms, and other content for toggling -->
-								<div class="collapse navbar-collapse navbar-collapse">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-collapse">
+                  <span class="search-button pull-right"
+                    ><a href="#search"><i class="fa fa-search"></i></a
+                  ></span>
 
-
-
-					                <span class="search-button pull-right"><a href="#search"><i class="fa fa-search"></i></a></span>
-
-									<ul class="nav navbar-nav navbar-right">
+                  <ul class="nav navbar-nav navbar-right">
 										<!-- Home -->
                                         <li class="dropdown"><a href="index.html">Home <span class="fa fa-angle-down"></span></a>
                                             <!-- submenu-wrapper -->
